[gd_scene load_steps=7 format=3 uid="uid://clhl1i353jtmj"]

[ext_resource type="Script" path="res://Items/Scripts/BuyablePickup.gd" id="1_vw3d6"]
[ext_resource type="Texture2D" uid="uid://dhro7ihoxmkk3" path="res://Assets/hud assets/floating txtbox.png" id="2_wlqch"]
[ext_resource type="LabelSettings" uid="uid://bms3iwap6uyli" path="res://Assets/hud assets/Title.tres" id="4_7q6b2"]
[ext_resource type="LabelSettings" uid="uid://daw641c4l4dde" path="res://Assets/hud assets/Text.tres" id="5_t4yco"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pepv2"]
radius = 23.0217

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u6iaq"]
radius = 18.0
height = 90.0

[node name="BuyablePickup" type="Area2D" node_paths=PackedStringArray("texture_sprite", "title_label", "description_label") groups=["sellable"]]
script = ExtResource("1_vw3d6")
texture_sprite = NodePath("Texture")
title_label = NodePath("Title")
description_label = NodePath("Description")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pepv2")

[node name="SellingInterface" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SellingInterface"]
shape = SubResource("CapsuleShape2D_u6iaq")

[node name="TextBox" type="Sprite2D" parent="."]
position = Vector2(-3.8147e-06, -81)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_wlqch")

[node name="Texture" type="Sprite2D" parent="."]
position = Vector2(1, 1)
scale = Vector2(0.7, 0.7)

[node name="Title" type="Label" parent="."]
offset_left = -51.0
offset_top = -120.0
offset_right = 53.0
offset_bottom = -87.0
text = "[Title]"
label_settings = ExtResource("4_7q6b2")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Description" type="Label" parent="." groups=["sellable"]]
offset_left = -49.0
offset_top = -84.0
offset_right = 54.0
offset_bottom = -30.0
text = "[Description]"
label_settings = ExtResource("5_t4yco")
horizontal_alignment = 1
autowrap_mode = 2

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 20.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="SellingInterface" to="." method="_on_selling_interface_body_entered"]
[connection signal="body_exited" from="SellingInterface" to="." method="_on_selling_interface_body_exited"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
